# nonebot-plugin-kindness-lesson

./: README.md  pyproject.toml
nonebot_plugin_kindness_lesson/: __init__.py  config.py
