[project]
name = "nonebot-plugin-kindness-lesson"
version = "0.1.1"
description = "NoneBot 恩情课文生成插件 / Kindness Lesson Generating Plugin for NoneBot"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = ["nonebot2>=2.4.0", "openai>=1.54.4"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
